// Generated by: gen-go-to-protobuf
syntax = "proto3";
package k8s.io.apimachinery.pkg.util.intstr;
option  go_package = "k8s.io/apimachinery/pkg/util/intstr";

import "kube.proto";

message IntOrString {
  int64  type    = 1 [(dev.f110.kubeproto.field) = { go_name: "Type", inline: false }];
  int32  int_val = 2 [(dev.f110.kubeproto.field) = { go_name: "IntVal", inline: false }];
  string str_val = 3 [(dev.f110.kubeproto.field) = { go_name: "StrVal", inline: false }];
}
